--- a/np.Shared/src/react/DynamicDialog/DynamicDialog.css
+++ b/np.Shared/src/react/DynamicDialog/DynamicDialog.css
@@ -35,7 +35,7 @@
     padding: 0.75rem 1.25rem;
     border-radius: 8px;
     /* overflow-y: auto; commented out to allow for dropdowns to show*/
-    max-height: 80vh;
+    max-height: 95%;
 }
 
 /* Show the settings dialog with transition */
