--- a/np.Shared/src/react/DynamicDialog/DynamicDialog.css
+++ b/np.Shared/src/react/DynamicDialog/DynamicDialog.css
@@ -57,6 +57,8 @@
     background: none;
     line-height: 40px;
     min-height: 2.5rem;
+    border-bottom: gray solid .5px;
+    padding-bottom: 2px;
     /* Match the height of the buttons container */
 }
 
@@ -187,7 +189,7 @@
 
     /* Style for switch-label */
     .switch-label {
-        font-weight: 500;
+        font-weight: 700;
         color: var(--fg-alt-color);
         /* flex-shrink: 0; */
     }
@@ -218,7 +220,7 @@
 
     /* Style for input-box-label */
     .input-box-label {
-        font-weight: 500;
+        font-weight: 700;
         color: var(--fg-alt-color);
         /* margin-bottom: 0.3rem; */
         margin-bottom: 0.5rem;
@@ -325,7 +327,7 @@
 
     /* Style for dropdown-label */
     .dropdown-label {
-        font-weight: 500;
+        font-weight: 700;
         color: var(--fg-alt-color);
         margin-right: 0.1rem;
         margin-bottom: 0.3rem;
