--- a/jgclark.Dashboard/src/react/css/dashboard.css
+++ b/jgclark.Dashboard/src/react/css/dashboard.css
@@ -87,8 +87,8 @@ dialog::backdrop {
 .sectionInfo {
 	display: block;
 	/* these padding values have been tweaked to be optically correct, at least for JGC's fonts */
-	padding-block-start: 0.2rem;
-	padding-block-end: 0.25rem;
+	padding-block-start: 4px;
+	padding-block-end: 4px;
 	padding-inline-start: 0.6rem;
 	padding-inline-end: 0.5rem;
 	color: var(--fg-sidebar-color);
@@ -260,7 +260,7 @@ dialog::backdrop {
 /* Override the theme definition of a completed task a little */
 .checked {
 	/* padding-top: 1px !important; */
-	/* margin-bottom: 0px !important; */
+	margin-bottom: 0px !important; /* over-ride margin-bottom: 0.25rem that is set somwhere else */
 	font-size: 98%
 }
 
