fix errant css which was causing differences in Chrome

--- a/jgclark.Dashboard/src/react/css/dashboard.css
+++ b/jgclark.Dashboard/src/react/css/dashboard.css
@@ -168,7 +168,7 @@ dialog::backdrop {
 	/* vertical in containing block */
 	/* align-self: start; */
 	/* horizontal in containing block */
-	justify-self: right;
+	/* justify-self: right; */
 	/* border-collapse: collapse; */
 	/* vertical for all items this contains */
 	align-items: baseline; /* start; */
