--- a/np.Shared/src/react/DynamicDialog/DynamicDialog.css
+++ b/np.Shared/src/react/DynamicDialog/DynamicDialog.css
@@ -34,7 +34,7 @@
     padding: 0.75rem 1.25rem;
     border-radius: 8px;
     /* overflow-y: auto; commented out to allow for dropdowns to show*/
-    max-height: 95%;
+    /* max-height: 95%; */
     font-size: 95%;
 }
 
