--- a/jgclark.Dashboard/src/react/css/SettingsDialog.css
+++ b/jgclark.Dashboard/src/react/css/SettingsDialog.css
@@ -11,7 +11,7 @@
     left: 50%;
     transform: translate(-50%, -48%); /* second param needs to be a little lower than 50% to avoid hiding the Header bar, as we want to see Perspective name */
     width: 80%;
-    max-width: 600px;
+    /* max-width: 600px; */
     border: none;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     /* z-index: 1000; */
