--- a/jgclark.Dashboard/src/react/css/DropdownMenu.css
+++ b/jgclark.Dashboard/src/react/css/DropdownMenu.css
@@ -1,6 +1,6 @@
 /**
  * CSS for the Dropdown menus
- * Last updated for v2.1.0.a
+ * Last updated for v2.1.0.b
  */
 
 /* Content in just 1 column */
@@ -16,26 +16,6 @@
   box-shadow: 0px 1px 1px 1px rgb(from var(--fg-main-color) r g b / 0.5);
   overflow: hidden;
   /* max-height: 0; */
-  transition: max-height 0.2s ease-out, opacity 0.2s ease-out;
-  opacity: 0;
-}
-
-/* TODO: bring this back into play in some way */
-.dropdown-content-two-cols {
-  /* Ensure the dropdown content is completely hidden when closed */
-  display: none;
-  /* flex-direction: column; */
-  /* gap: 1rem; */
-  grid-template-columns: max-content max-content;
-  grid-template-areas: "left right";
-  grid-gap: 1.5rem;
-  position: absolute;
-  color: var(--fg-main-color);
-  background-color: var(--bg-alt-color);
-  /* box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); */
-  box-shadow: 0px 1px 1px 1px rgb(from var(--fg-main-color) r g b / 0.5);
-  overflow: hidden;
-  max-height: 0;
   transition: max-height 0.2s ease-out, opacity 0.2s ease-out;
   opacity: 0;
 }
@@ -80,7 +60,7 @@
 .dropdown-content.show {
   display: grid;
   width: max-content;
-  right: -2rem;
+  right: -1rem;
   opacity: 1;
   padding: 0.5rem 1.0rem;
   animation: unfurl 0.2s ease-out forwards, showScrollbar 0s 0.2s forwards;
