--- a/jgclark.Dashboard/src/react/components/Header/Header.css
+++ b/jgclark.Dashboard/src/react/components/Header/Header.css
@@ -1,5 +1,5 @@
 /* CSS specific to Header component from jgclark.Dashboard plugin */
-/* Last updated for v2.1.0.a */
+/* Last updated for v2.1.0.b */
 /* Note: until 2.1.0.a8 was grid-based. But from a9 realised that flex is the natural, and thus easier, tool to use. */
 
 /* Settings for flex-based layout */
@@ -29,38 +29,40 @@
 
 /* MESSAGE_BANNER w3.css overrides */
 .iOS .header, .iPadOS .header {
-  padding-right: 2.2rem; 
   box-sizing: border-box; /* Ensure the padding is included in the element's total width */
   /* make room for NP sheet "X" button */
+  padding-right: 2.2rem; 
 }
 
-.lastFullRefresh {
+/* Refresh button(s) area */
+.refresh {
+	/* Assign the area */
+	/* grid-area: refresh; */
+	/* allow for 2 buttons at times */
+	display: inline-flex;
+	gap: 0.2rem;
+	/* to allow us to control clipping of hardRefreshButton */
+	max-width:28%;
+}
+
+/* Refresh time-ago text */
+.lastRefreshInfo {
 	/* Assign the area */
 	/* grid-area: lastUpdated; */
 	/* This ensures that the content of these divs is also centered */
 	flex-grow: 1;
 	align-items: center;
-	/* Make a fixed width so that as it changes it doesn't change the Refresh button position */
-	/* width: 9rem; */
-}
 
-/* Turn fixed width off on narrow screens */
-@media screen and (max-width: 600px) {
-	.lastFullRefresh {
+	/* Turn fixed width off on narrow screens */
+	/* TEST: no longer needed I think */
+	/* @media screen and (max-width: 600px) {
 		width: unset;
-	}
+	} */
 }
 
-.refresh {
-	/* Assign the area */
-	/* grid-area: refresh; */
-}
-
-/* may use in future */
 .totalCounts {
 	/* Assign the area */
 	/* grid-area: counts; */
-	/* align-self: unset; TEST: shouldn't be needed but otherwise lands up with 'end' */
 	flex-grow: 1;
 
 	/* Make sure totalCounts only shows when necessary */
@@ -77,14 +79,16 @@
 
 .dropdownButtons {
 	/* grid-area: dropdowns; */
-	display: flex;
+	/* display: flex; */
 	/* justify-self: end; */
 	/* gap between buttons */
 	gap: 0.9rem;
 	/* Align to the right edge */
-	justify-self: end;
+	/* justify-self: end;
 	justify-content: end;
-	margin-left: 0.4rem;
+	margin-left: 0.4rem; */
+	float: inline-end; /* a rare use of float! */
+	margin-inline-end: 0.5rem;
 
 	/* droppdown button icons through FontAwesome */
 	i {
@@ -101,7 +105,7 @@
 /* Widen button gaps on touchscreen interfaces, and leave gap for extra close button that appears */
 .iOS .dropdownButtons, .iPadOS .dropdownButtons {
 	gap: 1.2rem !important;
-	margin-right: 2rem !important;
+	margin-inline-end: 2rem !important;
 }
 
 /* For buttons in header area */
@@ -128,12 +132,21 @@
 }
 
 .HAButton:hover {
-	/* color: hsl(from currentcolor h s calc(l*0.8)); TODO(later): revert to this */
+	/* color: hsl(from currentcolor h s calc(l*0.8)); TODO(later): revert to this when better support in dev tooling */
 	filter: brightness(110%);
 }
 
-/* Give a little space to left of hardRefreshButton */
-/* Note: needs to come after HAButton definition above */
+/* Set this button text to clip if screen is narrow */
 .hardRefreshButton {
-	margin-left: 0.2rem;
+	overflow-x: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
+/* On narrow screens push the refresh and */
+@media screen and (max-width: 600px) {
+	/* Turn fixed width off on narrow screens */
+	.lastFullRefresh {
+		width: unset;
+	}
 }
