--- a/jgclark.Dashboard/src/react/css/DropdownMenu.css
+++ b/jgclark.Dashboard/src/react/css/DropdownMenu.css
@@ -9,7 +9,6 @@
   display: none;
   grid-template-columns: unset;
   grid-template-areas: "justTheOne";
-  position: absolute;
   color: var(--fg-main-color);
   background-color: var(--bg-alt-color);
   /* box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); */
@@ -18,6 +17,9 @@
   /* max-height: 0; */
   transition: max-height 0.2s ease-out, opacity 0.2s ease-out;
   opacity: 0;
+  position: absolute;
+  top: 2rem;
+  right:-1.8rem;
 }
 
 /* Make dropdown content only 1 column wide on narrow (i.e. iOS) screens */
@@ -60,9 +62,9 @@
 .dropdown-content.show {
   display: grid;
   width: max-content;
-  right: -1rem;
+  /* right: -1rem; */
   opacity: 1;
-  padding: 0.5rem 1.0rem;
+  padding: 0.5rem;
   animation: unfurl 0.2s ease-out forwards, showScrollbar 0s 0.2s forwards;
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
