Try to restore missing scrollbars

--- a/jgclark.Dashboard/src/react/css/PerspectivesTable.css
+++ b/jgclark.Dashboard/src/react/css/PerspectivesTable.css
@@ -1,4 +1,4 @@
-/* Container for the table with scrolling  */
+/* FIXME: Container for the table with scrolling  */
 .perspectives-table-container {
   overflow: auto;
 }
