--- a/jgclark.Dashboard/src/react/css/dashboard.css
+++ b/jgclark.Dashboard/src/react/css/dashboard.css
@@ -2,7 +2,7 @@
 /* Last updated 2024-09-20 for v2.1.0.a12 by @jgclark */
 
 :root {	
-	font-size: 16px; /* this works */
+	/* font-size: 16px; this works */
 	/* For MESSAGE_BANNER: Override w3.css which seems to take precedence for reasons unknown */
 	.w3-panel {
 		margin-top: 0px;
@@ -20,20 +20,10 @@ html {
 	--bg-ok-color: color-mix(in oklch, var(--bg-main-color), green 20%); /* TEST: for subtle colouring */
 }
 
-html,
-body {
-	font-size: 16px;
-}
-
 body {
 	margin: 0px;
 	width: 90vw;
 }
-
-/* TODO: Trying this as a way to unset the colour of icons */
-/* i {
-	color: unset;
-} */
 
 /* 
  * Darken background under any dialogs when open (See https://developer.mozilla.org/en-US/docs/Web/CSS/::backdrop)
