--- a/helpers/react/DynamicDialog/DynamicDialog.css
+++ b/helpers/react/DynamicDialog/DynamicDialog.css
@@ -34,7 +34,8 @@
     background-color: var(--bg-mid-color);
     padding: 0.75rem 0.6rem;
     border-radius: 8px;
-    overflow-y: auto; 
+    overflow: visible;
+    position: relative;
     max-height: 95%;
     font-size: 95%;
 }
@@ -507,4 +508,9 @@
   .thin-scrollbar::-webkit-scrollbar-thumb {
     background-color: #c5c5c5;
     border-radius: 4px;
+  }
+
+  .dropdown-select-dropdiv {
+    max-height: 30vh; 
+    overflow-y: auto;
   }
