Fix some CSS on dialogs

--- a/helpers/react/DynamicDialog/DynamicDialog.css
+++ b/helpers/react/DynamicDialog/DynamicDialog.css
@@ -10,7 +10,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     min-width: 25rem;
-    max-width: 80%;
+    max-width: 80vw;
     width: fit-content;
     border: none;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
@@ -18,7 +18,8 @@
     opacity: 1;
     border-radius: 8px;
     transition: opacity 0.2s ease-out;
-    /* overflow: hidden; commented out to allow for dropdowns to show */
+    overflow:auto;
+    max-height: 80vh;
 }
 
 /* Narrow for simpler confirmation dialogs */
@@ -47,6 +48,9 @@
 
 /* Style for the dialog buttons container */
 .dynamic-dialog-header {
+    position: sticky;
+    top: 0;
+    z-index: 100; /* Ensure it stays above other content */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -56,7 +60,6 @@
     background-color: var(--bg-alt-color);
     color: var(--tint-color);
     margin: 0;
-    background: none;
     line-height: 1.2rem;
     min-height: 2.5rem;
     border-bottom: gray solid .5px;
